--- a/q5/spiders/config.json
+++ b/q5/spiders/config.json
@@ -1,6 +1,6 @@
 {
-    "USERNAME": "postgres",
-    "PASSWORD": "pelin123",
-    "HOST": "localhost",
-    "DATABASE" : "database"
+    "USERNAME": "",
+    "PASSWORD": "",
+    "HOST": "",
+    "DATABASE" : ""
 }
